--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "prettier"
+        "airbnb-base",
+        "eslint:recommended"
     ],
     "overrides": [
     ],
