--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "css-loader": "^6.7.3",
     "csv-loader": "^3.0.5",
     "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.24.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
@@ -32,10 +34,14 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "xml-loader": "^1.2.1"
+    "xml-loader": "^1.0.0"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
